--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -116,6 +116,7 @@ flutter:
     - assets/images/Icons/password.png
     - assets/images/3dLogin.png
     - assets/images/woodBoard.png
+    - assets/images/splash logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
