--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: ^4.6.5
+  get: 4.6.1
   intro_screen_onboarding_flutter: ^1.0.0
   image_picker: ^1.0.4
   gradient_borders: ^1.0.0
@@ -117,6 +117,9 @@ flutter:
     - assets/images/3dLogin.png
     - assets/images/woodBoard.png
     - assets/images/splash logo.png
+    - assets/images/lock.png
+    - assets/images/Icons/name.png
+    - assets/images/Icons/blood.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
